fix vertical alignment against bottom of navbar

--- a/src/components/megaMenu/MegaMenu.scss
+++ b/src/components/megaMenu/MegaMenu.scss
@@ -7,11 +7,10 @@
 	background-color: #fff;
 	padding: 0px 50px;
 	position: absolute;
-	top: 133px;
+	top: 135px;
 	left: 0px;
 	z-index: 100;
 	border-bottom: 1px solid #026725;
-	cursor: default;
 
 	&__category {
 		padding-bottom: 30px;
